tests/dataset/tpc-h/compiler/kt/q22.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q22.kt:67:69: error: none of the following functions can be called with the arguments supplied: 
public final operator fun compareTo(other: Byte): Int defined in kotlin.Double
public open fun compareTo(other: Double): Int defined in kotlin.Double
public final operator fun compareTo(other: Float): Int defined in kotlin.Double
public final operator fun compareTo(other: Int): Int defined in kotlin.Double
public final operator fun compareTo(other: Long): Int defined in kotlin.Double
public final operator fun compareTo(other: Short): Int defined in kotlin.Double
        if (c.c_phone.substring(0, 2) in valid_codes && c.c_acctbal > avg_balance && (!run {
                                                                    ^
/tmp/q22.kt:110:19: error: type mismatch: inferred type is String? but String was expected
        __res.add((x as MutableMap<String, String>)["c_acctbal"])
                  ^
